# Aix-Route

./: .env.example  .gitignore  LICENSE.upstream  README.md  SHOW_HN.md  pyproject.toml  test_agent1.py  test_groq_ollama.py
.github/workflows/: test.yml
aix_route/: __init__.py
benchmarks/: README.md  __init__.py  groq_calibration.md
benchmarks/quick/: __init__.py  __main__.py  runner.py
docs/: CALIBRATION.md  index.html
horizon_router/: __init__.py  cache.py  client.py  server.py
integrations/: README.md  __init__.py  _core.py  _depth.py
integrations/autogen/: __init__.py  agent.py
integrations/langchain/: __init__.py  node.py
integrations/openai_agents/: __init__.py  tool.py
integrations/tests/: conftest.py  test_autogen.py  test_core.py  test_langchain.py  test_live_server.py  test_openai_agents.py
scripts/: measure.py
src/: calibrate.py  cli.py  policy.py  runners.py
src/estimators/: __init__.py  depth_estimator.py  task_classifier.py
src/metrics/: sfe.py  statistics.py
src/models/: __init__.py  anthropic_models.py  base.py  deepseek_models.py  gemini_models.py  groq_models.py  ollama_models.py  openai_compatible.py  openai_models.py  together_models.py
src/training/: finetune.py
tests/: test_aix_route_alias.py  test_analysis.py  test_calibrate.py  test_estimators.py  test_explorer_sync.py  test_metrics.py  test_models.py  test_policy.py  test_policy_extras.py  test_quick_benchmark.py
tests/snapshots/: model_horizons.json
ts-port/: LICENSE  README.md  package-lock.json  package.json  tsconfig.json
ts-port/src/: calibrate.ts  estimator.ts  horizon.ts  index.ts
ts-port/test/: horizon.test.ts
